[gd_scene load_steps=2 format=3 uid="uid://dkipbyiqgg61x"]

[ext_resource type="Script" path="res://addons/adaptive-audio/AudioTrackUI/BaseTrackUI/BaseTrackUI.gd" id="1"]

[node name="BaseTrackUI" type="Panel"]
custom_minimum_size = Vector2(320, 350)
offset_right = 250.0
offset_bottom = 280.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -157.0
offset_right = 141.0
offset_bottom = 157.0

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
text = "Base Track"

[node name="TrackName" type="LineEdit" parent="Content"]
layout_mode = 2
text = "Base Track"
placeholder_text = "Name"
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="Label" type="Label" parent="Content"]
layout_mode = 2
text = "Fade time:"

[node name="FadeTime" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="Content/FadeTime"]
layout_mode = 2
min_value = 0.01
max_value = 10.0
step = 0.01
value = 2.0

[node name="HSlider" type="HSlider" parent="Content/FadeTime"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 10.0
step = 0.01
value = 2.0

[node name="FileButtons" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="Content/FileButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Drop audio file here..."

[node name="Select" type="Button" parent="Content/FileButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Select audio file"

[node name="VSplitContainer" type="VSplitContainer" parent="Content"]
layout_mode = 2

[node name="TrackButtons" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Update" type="Button" parent="Content/TrackButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Update"

[node name="Play" type="Button" parent="Content/TrackButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play track"

[node name="Remove" type="Button" parent="Content/TrackButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Remove track"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.ogg", "*.wav", "*.mp3")
show_hidden_files = true
